Fix layout issues

--- a/src/app/main/sections/about/about.scss
+++ b/src/app/main/sections/about/about.scss
@@ -13,6 +13,7 @@
     line-height: 2em;
     text-align: center;
     margin: 0 auto;
+    display: block;
   }
 
   a {
