--- a/src/app/main/sections/end/end.scss
+++ b/src/app/main/sections/end/end.scss
@@ -10,10 +10,12 @@
 
   &__logo {
     margin: 0 auto;
+    display: block;
   }
 
   &__links {
     margin: 0 auto;
+    display: block;
 
     a {
       color: $gableGreen;
