--- a/src/app/main/sections/work/work.scss
+++ b/src/app/main/sections/work/work.scss
@@ -5,6 +5,7 @@ $work__colors: #142932, #162F37, #2F4954, #162F37, #2F4954, #142932;
 
   &__list {
     margin: 0 auto;
+    display: block;
 
     &__card {
       padding: 0.5em;
